--- a/src/AppBundle/Resources/views/Cycle/show.html.twig
+++ b/src/AppBundle/Resources/views/Cycle/show.html.twig
@@ -21,7 +21,11 @@
                 <th>Position</th>
                 <td>{{ entity.position }}</td>
             </tr>
-        </tbody>
+            <tr>
+                <th>isBox</th>
+                <td>{{ entity.isBox }}</td>
+            </tr>
+            </tbody>
     </table>
 
         <ul class="record_actions">
