--- a/src/AppBundle/Resources/views/Diff/decklistsDiff.html.twig
+++ b/src/AppBundle/Resources/views/Diff/decklistsDiff.html.twig
@@ -8,7 +8,7 @@
 
 <div class="row">
 <div class="col-sm-4">
-<h3><a href="{{ path('decklist_detail', {'decklist_id': decklist1.id,'decklist_name':decklist1.prettyname}) }}">{{ decklist1.name }}</a></h3>
+<h3><a href="{{ path('decklist_detail', {'decklist_id': decklist1.id,'decklist_name':decklist1.name_canonical}) }}">{{ decklist1.name }}</a></h3>
 {% for card in decklist1.content %}
 <div>
     {{ card.qty }}x
@@ -26,7 +26,7 @@
 {% endfor %}
 </div>
 <div class="col-sm-4">
-<h3><a href="{{ path('decklist_detail', {'decklist_id': decklist2.id,'decklist_name':decklist2.prettyname}) }}">{{ decklist2.name }}</a></h3>
+<h3><a href="{{ path('decklist_detail', {'decklist_id': decklist2.id,'decklist_name':decklist2.name_canonical}) }}">{{ decklist2.name }}</a></h3>
 {% for card in decklist2.content %}
 <div>
     {{ card.qty }}x
