--- a/src/AppBundle/Resources/views/Search/display-zoom.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-zoom.html.twig
@@ -64,7 +64,7 @@ app.user.params.card_id = {{ cards[0].id|json_encode|raw }};
                 	   {{ review.text|raw }}
             	   </div>
             	   <div class="review-date">
-            	       <time datetime="{{ review.datecreation|date('c') }}" title="{{ review.datecreation|date('F jS, Y') }}">{{ review.datecreation|date('n/j/y') }}</time>
+            	       <time datetime="{{ review.date_creation|date('c') }}" title="{{ review.date_creation|date('F jS, Y') }}">{{ review.date_creation|date('n/j/y') }}</time>
             	   </div>
             	   <div class="review-author">
             	       <a href="{{ path('user_profile_view', {user_id:review.author_id,user_name:review.author_name|e('url')}) }}" rel="author" class="username {{ review.author_color }}">{{ review.author_name }}</a>
@@ -79,7 +79,7 @@ app.user.params.card_id = {{ cards[0].id|json_encode|raw }};
             	   &mdash;
             	   <a title="{{ comment.author.reputation }} reputation" href="{{ path('user_profile_view', {user_id:comment.author.id,user_name:comment.author.username|e('url')}) }}" rel="author" class="username {{ comment.author.faction }}">{{ comment.author.username }}</a>
             	       {% if comment.author.donation > 0 %}<span class="glyphicon glyphicon-gift donator" title="AGoT2db Gracious Donator"></span>{% endif %}
-               	   <time datetime="{{ comment.datecreation|date('c') }}" title="{{ comment.datecreation|date('F jS, Y') }}">{{ comment.datecreation|date('n/j/y') }}</time>
+               	   <time datetime="{{ comment.date_creation|date('c') }}" title="{{ comment.date_creation|date('F jS, Y') }}">{{ comment.date_creation|date('n/j/y') }}</time>
                 </div>
             	   {% endfor %}
             	   
