removed images; fixed game name

--- a/src/AppBundle/Resources/views/Default/about.html.twig
+++ b/src/AppBundle/Resources/views/Default/about.html.twig
@@ -7,7 +7,7 @@
 
 <h1>{{ block('title') }}</h1>
 
-<p>This website is dedicated to providing a fast, powerful and exhaustive deck builder and search engine for Android:Netrunner cards, along with card descriptions and card scans.</p>
+<p>This website is dedicated to providing a fast, powerful and exhaustive deck builder and search engine for A Game of Thrones: The Card Game Second Edition cards, along with card descriptions and card scans.</p>
 <p>This website is optimized for mobile browsing (WebKit), and I will try to keep it that way.</p>
 
 <h2>Search syntax</h2>
