--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -116,7 +116,7 @@
     </p>
     
     <p style="color:#333">
-    The information presented on this site about A Game of Thrones LCG, both literal and graphical, is copyrighted by Fantasy Flight Games.
+    The information presented on this site about A Game of Thrones: The Card Game Second Edition, both literal and graphical, is copyrighted by Fantasy Flight Games.
     This website is not produced, endorsed, supported, or affiliated with Fantasy Flight Games.
     </p>
     
